0.0.4
  - compile option: filenamePrefix allows
    /destination/<filenamePrefix>/filename.htm