@@ -29,7 +29,7 @@ module.exports = function CarverExport(){
 
     prettyHtml: false,
 
-    locals: { doc: null },
+    locals: { doc: null, curLang: 'en' },
 
     skipDependencies: []
 
@@ -106,7 +106,9 @@ module.exports = function CarverExport(){
 
     if( content && typeof(content) === 'object' && content instanceof Array )
       return async.eachSeries( content, function( obj, nextIteration){
-        var iterationCompiler = Carver.init({ workdir: compiler.cwd, locals: compiler.config.locals });
+        var iterationCompiler = Carver.init({ workdir: compiler.cwd, 
+                                              locals: compiler.config.locals,
+                                              skipDependencies: compiler.config.skipDependencies });
         iterationCompiler.compile( obj, nextIteration );
       }, cb);
 
@@ -120,8 +122,8 @@ module.exports = function CarverExport(){
     options.prettyHtml = this.config.prettyHtml;
 
     if( this.config.controller && typeof( this.config.controller.before ) === 'function' )
-      return this.config.controller.before( content, options, function(){
-        return Carver.engines[options.engine].compile( content, options, continueContent );
+      return this.config.controller.before( content, options, function( controllerOptions ){
+        return Carver.engines[options.engine].compile( content, _.merge(options, controllerOptions), continueContent );
       });
     
     return Carver.engines[options.engine].compile( content, options, continueContent );
@@ -150,7 +152,6 @@ module.exports = function CarverExport(){
       return;
 
     this.cwd = this.config.workdir;
-    this.config.skipDependencies.push( this.config.workdir );
 
     if( !fs.existsSync( this.cwd ) )
       throw new Error('carver initialized with workdir but ' + this.cwd + ' was not found');
@@ -165,8 +166,13 @@ module.exports = function CarverExport(){
     if( fs.existsSync( join( this.cwd, '..', '.settings.js' ) ) )
       settingsJS = _.merge( require( join( this.cwd, '..', '.settings.js' ) ), settingsJS );
 
-    if( settingsJS.availableLangs )
+    if( fs.existsSync( join( this.cwd, '..', '..', '.settings.js' ) ) )
+      settingsJS = _.merge( require( join( this.cwd, '..', '..', '.settings.js' ) ), settingsJS );
+
+    if( settingsJS.availableLangs ){
       this.config.multiLangs = ( settingsJS.availableLangs instanceof Array ) && settingsJS.availableLangs.length > 1;
+      this.config.locals.curLang = settingsJS.availableLangs[0];
+    }
 
   };
 
@@ -289,7 +295,7 @@ module.exports = function CarverExport(){
       
       async.eachSeries( obj.translations, function( translation, nextTranslation ){
         compiler.config.locals.doc = obj;
-        compiler.config.locals.doc.curLang = options.curLang = translation.locale;
+        compiler.config.locals.curLang = compiler.config.locals.doc.curLang = options.curLang = translation.locale;
         translation.filename = obj.filename;
         compiler.compileObject( translation, options, nextTranslation );
       }, cb);
@@ -326,18 +332,31 @@ module.exports = function CarverExport(){
     if( !(protocol in Carver.writers) )
       throw new Error('carver compiler could not find a matching writer for '+protocol );
 
-    if( compiler.config.filenamePrefix && options.filename )
+    options.filename = options.filename || options.template;
+    if( compiler.config.filenamePrefix )
       options.filename = join( compiler.config.filenamePrefix, options.filename );
+
+    if( compiler.config.skipDependencies.indexOf( options.filename ) >= 0 )
+      return cb ? cb() : null;
 
     Carver.writers[protocol]( htmlContent, (options.filename || null), _.merge( {  cwd: this.cwd, 
                                                                                    locale: options.locale,
                                                                                    logger: this.logger,
-                                                                                   template: options.template }, this.workdirSettings ), runDependenciesAndQuit );
+                                                                                   template: options.template }, this.workdirSettings ), runAfterWriter );
 
+    function runAfterWriter( err ){
+      if( err ){ return cb ? cb( err ) : err; }
+      if( compiler.config.controller && typeof(compiler.config.controller.after) === 'function' )
+        return compiler.config.controller.after( options, runDependenciesAndQuit );
+      runDependenciesAndQuit( null );
+    }
 
     function runDependenciesAndQuit( err ){
       if( err ){ return cb ? cb( err ) : err; }
       if( compiler.config.controller && compiler.config.controller.dependencies && compiler.config.controller.dependencies instanceof Array ){
+
+        compiler.config.skipDependencies.push( options.filename );
+
         return async.eachSeries( compiler.config.controller.dependencies, function( dep, nextIteration ){
           if( !dep.path )
             throw new Error('dependency must have a path property, had: '+dep.toString());
@@ -348,12 +367,6 @@ module.exports = function CarverExport(){
           if( !fs.existsSync( depWorkdir ) )
             throw new Error('dependency\'s workdir does not exist ('+depWorkdir+')');
 
-          console.log('checking if i should skip', compiler.config.skipDependencies, depWorkdir );
-          if( compiler.config.skipDependencies.indexOf( depWorkdir ) >= 0 )
-            return nextIteration();
-
-          console.log('not skipping');
-
           if( dep.options && dep.options.iterationArrayKey )
             return initIterationCompiler( compiler.config.locals[dep.options.iterationArrayKey], compiler.config.locals );
 
@@ -363,11 +376,18 @@ module.exports = function CarverExport(){
           if( typeof(dep.before) === 'function' )
             return dep.before( compiler.config.locals, initIterationCompiler );
 
+          if( typeof(dep.options.inheritKeys) === 'object' ){
+            compiler.config.locals.inherited = {};
+            for( var key in dep.options.inheritKeys )
+              compiler.config.locals.inherited[key] = compiler.config.locals[dep.options.inheritKeys[key]];
+          }
+
           initIterationCompiler( null, compiler.config.locals );
 
           function initIterationCompiler( iterationObj, iterationLocals ){
             var iterationCompiler = Carver.init({ workdir: depWorkdir, 
-                                                  locals: iterationLocals });
+                                                  locals: iterationLocals,
+                                                  skipDependencies: compiler.config.skipDependencies});
             iterationCompiler.compile( iterationObj, nextIteration  );
           }
 
